--- a/src/components/Radio/Radio.module.scss
+++ b/src/components/Radio/Radio.module.scss
@@ -76,7 +76,8 @@
 .card {
   padding: var(--spacing-md);
   padding-right: var(--spacing-3xl);
-  border: var(--stroke-sm) solid var(--border-tertiary);
+  background-color: var(--surface-sunken);
+  border: var(--stroke-xs) solid var(--border-tertiary);
   border-radius: var(--corner-radius-md);
   overflow: hidden;
 
